# new-api-gateway

./: .env.docker  .env.example  .gitignore  AGENTS.md  ANOMALY_DETECTION.md  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  go.mod  go.sum  start.sh
deploy/: .dockerignore  Dockerfile  docker-compose.arm.yml  docker-compose.yml
docs/: development.md
e2e/: conftest.py  helpers.py  pyproject.toml  run_all.py  test_gateway_capture.py  test_gateway_claude.py  test_gateway_openai.py  test_gateway_worker_pipeline.py  test_gateway_worker_pipeline_oss.py  test_media_extraction.py  test_media_extraction_oss.py  test_offline_batch.py  test_smoke.py  (+3 more)
workers/analysis_worker/: baseline.py  batch_scheduler.py  context_repository.py  contract_example.json  core_stage.py  embedding_client.py  enrichment_stage.py  evidence.py  heartbeat.py  isolation_forest.py  llm_judge.py  main.py  media_extraction.py  media_snapshot.py  models.py  normalizers.py  offline.py  oss_evidence.py  pyproject.toml  repository.py  rules.py  runtime_metrics.py  streams.py  task_store.py  work_relevance.py
workers/analysis_worker/tests/: test_baseline.py  test_batch_scheduler.py  test_context_repository.py  test_embedding_client.py  test_evidence.py  test_heartbeat.py  test_isolation_forest.py  test_llm_judge.py  test_media_extraction.py  test_media_snapshot.py  test_models.py  test_normalizers.py  test_offline.py  test_oss_evidence.py  test_oss_integration.py  test_pipeline.py  test_repository.py  test_rules.py  test_runtime_metrics.py  test_streams.py  test_task_store.py  test_work_relevance.py
(+214 files in other folders)
