[project]
name = "new-api-gateway-analysis-worker"
version = "0.1.0"
description = "Analysis worker contracts for the new-api audit gateway"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.2.0",
    "redis>=5.0.0",
    "pytest>=8.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
