[project]
name = "new-api-gateway-analysis-worker"
version = "0.1.0"
description = "Analysis worker contracts for the new-api audit gateway"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.2.0",
    "redis>=5.0.0",
    "pytest>=8.0.0",
    "oss2>=2.19.1",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "pgvector>=0.3.0",
    "httpx>=0.27.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "requests>=2.33.1",
]
